# kitchen-service/src/router/kitchenRouter.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import { getDishes, createDish, updateDishQuantity, getDishById } from '../controllers/DishController';
+import { getDishes, createDish, updateDishQuantity, getDishByName } from '../controllers/DishController';
 import { getMenu } from '../controllers/MenuController'
 
 const router = express.Router();
@@ -7,8 +7,8 @@ const router = express.Router();
 router.get('/', getMenu);
 router.get('/dish', getDishes);
 router.post('/dish', createDish);
-router.put('/dish/:id', updateDishQuantity);
-router.get('/dish/:id', getDishById);
+router.put('/dish/:name', updateDishQuantity);
+router.get('/dish/:name', getDishByName);
 
 
 export { router as kitchenRouter };
